--- a/my-work/src/index.css
+++ b/my-work/src/index.css
@@ -55,4 +55,15 @@
 @theme {
   --font-sans: 'Pretendard', sans-serif;
 
+  --color-gray-50: #ffffff;
+  --color-gray-100: #fafafa;
+  --color-gray-200: #f7f7f7;
+  --color-gray-300: #ededed;
+  --color-gray-400: #c9c9c9;
+  --color-gray-500: #9b9b9b;
+  --color-gray-600: #797979;
+  --color-gray-700: #4b4b4b;
+  --color-gray-800: #262626;
+  --color-gray-900: #0f0f0f;
+  --color-gray-950: #000000;
 }
