--- a/my-work/src/index.css
+++ b/my-work/src/index.css
@@ -54,6 +54,9 @@
 
 @theme {
   --font-sans: 'Pretendard', sans-serif;
+  --primary: #00ba95;
+
+  --color-primary: var(--primary);
 
   --color-gray-50: #ffffff;
   --color-gray-100: #fafafa;
@@ -66,4 +69,34 @@
   --color-gray-800: #262626;
   --color-gray-900: #0f0f0f;
   --color-gray-950: #000000;
+
+  --breakpoint-*: initial;
+  --breakpoint-tablet: 48rem;
+  --breakpoint-laptop: 80rem;
+  --breakpoint-desktop: 97.5rem;
+}
+
+main {
+  max-width: 100%;
+  overflow: hidden;
+}
+
+header {
+  backdrop-filter: blur(2px);
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+}
+
+header:hover {
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px;
+}
+
+.image-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
