--- a/my-work/src/index.css
+++ b/my-work/src/index.css
@@ -100,3 +100,13 @@ header:hover {
   height: 100%;
   object-fit: cover;
 }
+
+.mo_only {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .mo_only {
+    display: block;
+  }
+}
